# ChangeLog for net-misc/netkit-rsh
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-rsh/ChangeLog,v 1.58 2008/06/14 13:31:28 nixnut Exp $

  14 Jun 2008; nixnut <nixnut@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  Added ~ppc wrt bug 210783

  21 Mar 2008; Markus Meier <maekke@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  add ~amd64, bug #210783

  06 Mar 2008; Raúl Porcel <armin76@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  Add ~alpha/~ia64 wrt #210783

  05 Mar 2008; Ferris McCormick <fmccor@gentoo.org>
  netkit-rsh-0.17-r9.ebuild:
  Add back ~sparc for testing, Bug #210783.

  05 Mar 2008; Brent Baude <ranger@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  keyworded ~arch for ppc64, bug 210783

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  Marked ~hppa (bug #210783).

  04 Mar 2008; <cla@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  Marked ~x86 (bug #210783). Thanks to Michał Wołonkiewicz <volon@vp.pl> for
  testing.

  25 Feb 2008; Diego Pettenò <flameeyes@gentoo.org>
  netkit-rsh-0.17-r9.ebuild:
  Fix dependency, thanks to Xake in bug #211390.

  20 Feb 2008; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Fix dependencies for pambase/pam.

*netkit-rsh-0.17-r9 (19 Feb 2008)

  19 Feb 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/rexec.pamd-pambase, +files/rlogin.pamd-pambase,
  +files/rsh.pamd-pambase, +netkit-rsh-0.17-r9.ebuild:
  Add a new revision with pambase's system-remote-login as base stack.

  19 Feb 2008; Diego Pettenò <flameeyes@gentoo.org> -files/rexec.pamd,
  -files/rlogin.pamd, -files/rsh.pamd:
  Remove older pamd files to avoid scaring me again with pam_stack.so.

  02 Jan 2008; Mike Frysinger <vapier@gentoo.org> netkit-rsh-0.17-r8.ebuild:
  Respect env LDFLAGS. Respect CC for everyone, not just cross-compilers
  #203911 by Davide Cendron.

  23 Jul 2007; Mike Frysinger <vapier@gentoo.org> netkit-rsh-0.17-r8.ebuild:
  Punt bindnow-flags usage.
