@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/netkit-rsh
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-rsh/ChangeLog,v 1.58 2008/06/14 13:31:28 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-rsh/ChangeLog,v 1.59 2008/06/16 21:09:13 vapier Exp $
+
+  16 Jun 2008; Mike Frysinger <vapier@gentoo.org> netkit-rsh-0.17-r9.ebuild:
+  Fix building when ARG_MAX is not defined #225341 by Tobias Scherbaum.
 
   14 Jun 2008; nixnut <nixnut@gentoo.org> netkit-rsh-0.17-r9.ebuild:
   Added ~ppc wrt bug 210783
